@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2016, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,7 +21,7 @@
  * questions.
  */
 
-/**
+/*
  * @test
  * @bug 7018098
  * @summary CacheFSInfo persists too long
@@ -60,6 +60,10 @@ public class T7018098 extends JavacTestingAbstractProcessor {
         _assert(!testDir.exists());
 
         compile(
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            "-XDaccessInternalAPI",
             "-proc:only",
             "-processor", myName,
             "-Aexpect=false",
@@ -69,6 +73,10 @@ public class T7018098 extends JavacTestingAbstractProcessor {
         _assert(testDir.exists());
 
         compile(
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            "-XDaccessInternalAPI",
             "-proc:only",
             "-processor", myName,
             "-Aexpect=true",
